force-app/main/default/objects/Clase__c/Clase__c.object-meta.xml
<CustomObject>
    <label>Clase</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>