force-app/main/default/objects/Clase__c/fields/Contenido__c.field-meta.xml
<CustomField>
    <fullName>Contenido__c</fullName>
    <description>brinda información sobre el contenido que se va a ver en la clase</description>
    <label>Contenido</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>