force-app/main/default/objects/Clase__c/fields/Orden__c.field-meta.xml
<CustomField>
    <fullName>Orden__c</fullName>
    <description>determina el orden en los que son vistas las clases dentro del modulo</description>
    <label>Orden</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>