force-app/main/default/objects/Clase__c/fields/Presentaci_n__c.field-meta.xml
<CustomField>
    <fullName>Presentaci_n__c</fullName>
    <description>contiene el URL con el contenido de la clase</description>
    <label>Presentación</label>
    <type>Url</type>
</CustomField>