force-app/main/default/objects/Clase__c/fields/Prework__c.field-meta.xml
<CustomField>
    <fullName>Prework__c</fullName>
    <description>Información de los materiales y lecturas necesarias para iniciar una clase</description>
    <label>Prework</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>