force-app/main/default/objects/Clase__c/fields/Ruta__c.field-meta.xml
<CustomField>
    <fullName>Ruta__c</fullName>
    <label>Ruta</label>
    <referenceTo>Ruta__c</referenceTo>
    <relationshipLabel>Clases</relationshipLabel>
    <relationshipName>Clases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>