force-app/main/default/objects/Clase__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ruta__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>